# pyvis

./: manim.cfg  pyproject.toml
media/videos/1080p60/partial_movie_files/Detector/: partial_movie_file_list.txt
media/videos/1080p60/partial_movie_files/Geometry/: partial_movie_file_list.txt
media/videos/1080p60/partial_movie_files/Micelles/: partial_movie_file_list.txt
media/videos/1080p60/partial_movie_files/Sample/: partial_movie_file_list.txt
media/videos/1080p60/partial_movie_files/SampleDetector/: partial_movie_file_list.txt
media/videos/1080p60/partial_movie_files/SampleDetectorGeometry/: partial_movie_file_list.txt
media/videos/1080p60/partial_movie_files/SampleStage/: partial_movie_file_list.txt
media/videos/1080p60/partial_movie_files/SampleZAlign/: partial_movie_file_list.txt
media/videos/1080p60/partial_movie_files/ShowBeam/: partial_movie_file_list.txt
media/videos/1080p60/partial_movie_files/VertAlign/: partial_movie_file_list.txt
src/: tools.py
src/media/videos/tools/1080p60/partial_movie_files/Geometry/: partial_movie_file_list.txt
