[tool.poetry]
name = "py-vis"
version = "0.1.0"
description = "Visualizations for reflectivity"
authors = ["Harlan D Heilman <73567020+HarlanHeilman@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
